--- a/app/src/main/res/layout/calendar_day_title_text.xml
+++ b/app/src/main/res/layout/calendar_day_title_text.xml
@@ -3,4 +3,7 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_weight="1"
-    android:gravity="center" />
+    android:gravity="center"
+    android:textSize="?attr/fb_body_text_size"
+    android:textColor="@color/BLACK"
+    android:textStyle="bold"/>
