--- a/app/src/main/res/layout/activity_brapi.xml
+++ b/app/src/main/res/layout/activity_brapi.xml
@@ -41,16 +41,16 @@
         android:layout_marginBottom="10dp">
 
         <TextView
-            android:id="@+id/sortByLbl"
+            android:id="@+id/sortLbl"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:text="@string/brapi_study_sort_by" />
+            android:text="@string/brapi_study_sort" />
 
         <Spinner
-            android:id="@+id/sortBySpinner"
+            android:id="@+id/sortSpinner"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3" />
