--- a/app/src/main/res/layout/view_trait_photo_settings.xml
+++ b/app/src/main/res/layout/view_trait_photo_settings.xml
@@ -1,64 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/view_trait_photo_settings_camera_rg"
+        android:layout_margin="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <RadioButton
+            android:id="@+id/view_trait_photo_settings_camera_system_rb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/view_trait_photo_settings_camera_system"/>
+        <RadioButton
+            android:id="@+id/view_trait_photo_settings_camera_custom_rb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/view_trait_photo_settings_camera_custom"/>
+    </RadioGroup>
+
+    <CheckBox
+        android:id="@+id/view_trait_photo_preview_cb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/view_trait_photo_settings_preview_title"
+        android:layout_margin="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_trait_photo_settings_camera_rg" />
+
+    <TextView
+        android:id="@+id/view_trait_photo_settings_resolution_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/view_trait_photo_settings_resolution_title"
+        android:layout_margin="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_trait_photo_preview_cb" />
+
+    <FrameLayout
+        android:id="@+id/view_trait_photo_settings_resolution_fl"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="300dp"
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_trait_photo_settings_resolution_tv"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0">
 
-        <RadioGroup
-            android:layout_width="wrap_content"
+        <ScrollView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/view_trait_photo_settings_camera_rg"
+            android:orientation="vertical"
             android:layout_margin="16dp"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-            <RadioButton
-                android:id="@+id/view_trait_photo_settings_camera_system_rb"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/view_trait_photo_settings_camera_system"/>
-            <RadioButton
-                android:id="@+id/view_trait_photo_settings_camera_custom_rb"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/view_trait_photo_settings_camera_custom"/>
-        </RadioGroup>
+            android:background="@drawable/cell">
 
-        <CheckBox
-            android:id="@+id/view_trait_photo_preview_cb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/view_trait_photo_settings_preview_title"
-            android:layout_margin="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view_trait_photo_settings_camera_rg" />
+            <RadioGroup
+                android:layout_margin="16dp"
+                android:id="@+id/view_trait_photo_settings_resolution_rg"
+                android:paddingBottom="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/view_trait_photo_settings_resolution_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/view_trait_photo_settings_resolution_title"
-            android:layout_margin="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view_trait_photo_preview_cb" />
+        </ScrollView>
+    </FrameLayout>
 
-        <RadioGroup
-            android:layout_margin="16dp"
-            android:id="@+id/view_trait_photo_settings_resolution_rg"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view_trait_photo_settings_resolution_tv"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
