--- a/app/src/main/res/layout/trait_camera.xml
+++ b/app/src/main/res/layout/trait_camera.xml
@@ -50,6 +50,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/camera_fragment_rv"/>
 
+        <!-- Trevor's 'embiggen' button -->
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            style="@style/FloatingActionButtonStyle.SmallTraitButtons"
+            android:id="@+id/trait_camera_expand_btn"
+            android:layout_width="@dimen/fb_trait_fab_size_small"
+            android:layout_height="@dimen/fb_trait_fab_size_small"
+            android:layout_margin="8dp"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:src="@drawable/arrow_expand"
+            app:layout_constraintTop_toTopOf="@id/trait_camera_pv"
+            app:layout_constraintBottom_toBottomOf="@id/trait_camera_pv"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintEnd_toEndOf="@id/trait_camera_pv"
+            android:contentDescription="@string/trait_camera_capture_content_description" />
+
         <ImageView
             android:visibility="gone"
             android:id="@+id/trait_camera_iv"
