swapped field and plot icons

--- a/app/src/main/res/drawable/ic_stats_field.xml
+++ b/app/src/main/res/drawable/ic_stats_field.xml
@@ -6,5 +6,5 @@
     android:viewportHeight="24.0">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M16,5V11H21V5M10,11H15V5H10M16,18H21V12H16M10,18H15V12H10M4,18H9V12H4M4,11H9V5H4V11Z" />
+        android:pathData="M3,3H21V21H3V3M5,5V19H19V5H5Z"  />
 </vector>
