--- a/app/src/main/res/drawable/ic_nav_drawer_fields.xml
+++ b/app/src/main/res/drawable/ic_nav_drawer_fields.xml
@@ -6,5 +6,5 @@
     android:viewportHeight="24.0">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M4,11h5L9,5L4,5v6zM4,18h5v-6L4,12v6zM10,18h5v-6h-5v6zM16,18h5v-6h-5v6zM10,11h5L15,5h-5v6zM16,5v6h5L21,5h-5z" />
+        android:pathData="M3,3H21V21H3V3M5,5V19H19V5H5Z" />
 </vector>
