--- a/app/src/main/res/layout/trait_camera.xml
+++ b/app/src/main/res/layout/trait_camera.xml
@@ -17,7 +17,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
+            android:layout_margin="8dp"
             android:orientation="horizontal"
             tools:listitem="@layout/list_item_image"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -25,7 +25,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/trait_camera_pv"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintHorizontal_bias="1.0"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             style="@style/FloatingActionButtonStyle.TraitButtons"
@@ -39,78 +41,6 @@
             app:layout_constraintTop_toBottomOf="@id/camera_fragment_rv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
-
-        <androidx.camera.view.PreviewView
-            tools:visibility="visible"
-            android:visibility="gone"
-            android:id="@+id/trait_camera_pv"
-            android:layout_width="0dp"
-            android:layout_height="640px"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/camera_fragment_rv"/>
-
-        <!-- Trevor's 'embiggen' button -->
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            style="@style/FloatingActionButtonStyle.SmallTraitButtons"
-            android:id="@+id/trait_camera_expand_btn"
-            android:layout_width="@dimen/fb_trait_fab_size_small"
-            android:layout_height="@dimen/fb_trait_fab_size_small"
-            android:layout_margin="8dp"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:src="@drawable/arrow_expand"
-            app:layout_constraintTop_toTopOf="@id/trait_camera_pv"
-            app:layout_constraintBottom_toBottomOf="@id/trait_camera_pv"
-            app:layout_constraintVertical_bias="0"
-            app:layout_constraintEnd_toEndOf="@id/trait_camera_pv"
-            android:contentDescription="@string/trait_camera_capture_content_description" />
-
-        <ImageView
-            android:visibility="gone"
-            android:id="@+id/trait_camera_iv"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:scaleType="fitCenter"
-            android:adjustViewBounds="true"
-            tools:src="@raw/chip"
-            app:layout_constraintVertical_bias="0"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/camera_fragment_capture_btn"
-            app:layout_constraintTop_toBottomOf="@id/camera_fragment_rv"
-            android:contentDescription="@string/trait_camera_preview_content_description" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            style="@style/FloatingActionButtonStyle.SmallTraitButtons"
-            android:id="@+id/camera_fragment_settings_btn"
-            android:layout_width="@dimen/fb_trait_fab_size_small"
-            android:layout_height="@dimen/fb_trait_fab_size_small"
-            android:layout_margin="8dp"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:src="@drawable/ic_nav_drawer_settings"
-            app:layout_constraintTop_toTopOf="@id/camera_fragment_capture_btn"
-            app:layout_constraintEnd_toStartOf="@id/camera_fragment_capture_btn"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/camera_fragment_capture_btn"
-            android:contentDescription="@string/trait_camera_capture_content_description" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            style="@style/FloatingActionButtonStyle.TraitButtons"
-            android:id="@+id/camera_fragment_capture_btn"
-            android:layout_width="@dimen/fb_trait_fab_size"
-            android:layout_height="@dimen/fb_trait_fab_size"
-            android:layout_margin="8dp"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:src="@drawable/camera_24px"
-            app:layout_constraintTop_toBottomOf="@id/trait_camera_pv"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:contentDescription="@string/trait_camera_capture_content_description" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
