fixed bottom toolbar delete for new camera trait layouts updated camera trait ui updated camera settings dialog ui removed settings from fullscreen camera updated fullscreen camera background to black updated camera settings dialog strings improved image loading to only load thumbnails on-the-fly improved preview w/h based on screen density restricted image aspect ratios to 4:3 bugfix for canceling coroutine when navigating between plots

--- a/app/src/main/res/layout/list_item_image.xml
+++ b/app/src/main/res/layout/list_item_image.xml
@@ -4,21 +4,30 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="4dp"
-    android:background="@drawable/cell"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        tools:src="@raw/chip"
-        android:id="@+id/list_item_image_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/list_item_image_content_description"
+    <androidx.cardview.widget.CardView
+        android:layout_width="@dimen/camera_preview_width"
+        android:layout_height="@dimen/camera_preview_height"
+        android:id="@+id/list_item_image_cv"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageView
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            tools:src="@raw/chip"
+            android:id="@+id/list_item_image_iv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/list_item_image_content_description"/>
+
+    </androidx.cardview.widget.CardView>
 
     <ProgressBar
         android:id="@+id/list_item_image_pb"
@@ -37,8 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_close_circle_outline"
-        app:layout_constraintEnd_toEndOf="@id/list_item_image_iv"
-        app:layout_constraintTop_toTopOf="@id/list_item_image_iv"
+        app:layout_constraintEnd_toEndOf="@id/list_item_image_cv"
+        app:layout_constraintTop_toTopOf="@id/list_item_image_cv"
         android:contentDescription="@string/list_item_image_close_content_description"
         android:id="@+id/list_item_image_close_btn"/>
 
