--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/BLACK"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -22,19 +23,6 @@
         app:layout_constraintDimensionRatio="H,3:4"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        style="@style/FloatingActionButtonStyle.SmallTraitButtons"
-        android:id="@+id/camerax_settings_btn"
-        android:layout_width="@dimen/fb_trait_fab_size_small"
-        android:layout_height="@dimen/fb_trait_fab_size_small"
-        android:layout_margin="8dp"
-        android:src="@drawable/ic_nav_drawer_settings"
-        app:layout_constraintTop_toTopOf="@id/camerax_capture_btn"
-        app:layout_constraintEnd_toStartOf="@id/camerax_capture_btn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/camerax_capture_btn"
-        android:contentDescription="@string/trait_camera_capture_content_description" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         style="@style/FloatingActionButtonStyle.TraitButtons"
