--- a/app/src/main/res/layout/list_item_camera_preview.xml
+++ b/app/src/main/res/layout/list_item_camera_preview.xml
@@ -4,22 +4,30 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="4dp"
-    android:background="@drawable/cell"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <androidx.camera.view.PreviewView
-        tools:visibility="visible"
-        android:visibility="gone"
-        android:id="@+id/trait_camera_pv"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintDimensionRatio="H,3:4"
-        app:layout_constraintTop_toTopOf="parent"
+    <androidx.cardview.widget.CardView
+        android:layout_width="@dimen/camera_preview_width"
+        android:layout_height="@dimen/camera_preview_height"
+        android:id="@+id/list_item_camera_cv"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/camera_fragment_capture_btn"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <androidx.camera.view.PreviewView
+            tools:visibility="visible"
+            android:visibility="gone"
+            android:id="@+id/trait_camera_pv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitCenter"
+            app:implementationMode="compatible"/>
+
+    </androidx.cardview.widget.CardView>
 
     <!-- todo on child camera branch merges, hook this into implementations -->
     <ImageView
@@ -33,7 +41,7 @@
         app:layout_constraintVertical_bias="0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/camera_fragment_capture_btn"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:contentDescription="@string/trait_camera_preview_content_description" />
 
     <!-- Trevor's 'embiggen' button -->
@@ -46,41 +54,10 @@
         android:visibility="gone"
         tools:visibility="visible"
         android:src="@drawable/arrow_expand"
-        app:layout_constraintTop_toTopOf="@id/trait_camera_pv"
-        app:layout_constraintBottom_toBottomOf="@id/trait_camera_pv"
+        app:layout_constraintTop_toTopOf="@id/list_item_camera_cv"
+        app:layout_constraintBottom_toBottomOf="@id/list_item_camera_cv"
         app:layout_constraintVertical_bias="0"
-        app:layout_constraintEnd_toEndOf="@id/trait_camera_pv"
-        android:contentDescription="@string/trait_camera_capture_content_description" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        style="@style/FloatingActionButtonStyle.SmallTraitButtons"
-        android:id="@+id/camera_fragment_settings_btn"
-        android:layout_width="@dimen/fb_trait_fab_size_small"
-        android:layout_height="@dimen/fb_trait_fab_size_small"
-        android:layout_margin="8dp"
-        android:visibility="gone"
-        tools:visibility="visible"
-        android:src="@drawable/ic_nav_drawer_settings"
-        app:layout_constraintTop_toTopOf="@id/camera_fragment_capture_btn"
-        app:layout_constraintEnd_toStartOf="@id/camera_fragment_capture_btn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/camera_fragment_capture_btn"
-        android:contentDescription="@string/trait_camera_capture_content_description" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        style="@style/FloatingActionButtonStyle.TraitButtons"
-        android:id="@+id/camera_fragment_capture_btn"
-        android:layout_width="@dimen/fb_trait_fab_size"
-        android:layout_height="@dimen/fb_trait_fab_size"
-        android:layout_margin="8dp"
-        android:visibility="gone"
-        tools:visibility="visible"
-        android:src="@drawable/camera_24px"
-        app:layout_constraintTop_toBottomOf="@id/trait_camera_pv"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/list_item_camera_cv"
         android:contentDescription="@string/trait_camera_capture_content_description" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
